# llm-one-api

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: LOAD_BALANCING.md  MODEL_PRICING.md  QUICKSTART.md  RATE_LIMITING.md  README.md  STATISTICS.md
examples/client_examples/: curl_examples.sh  openai_client.py
examples/config_examples/: development.yaml  load_balance.yaml  production.yaml  with_pricing.yaml
examples/custom_plugin/: README.md  __init__.py
llm_one_api/: __init__.py  __main__.py  run_server.py
llm_one_api/adapters/: __init__.py  anthropic.py  base.py  openai.py
llm_one_api/api/: __init__.py  app.py  dependencies.py
llm_one_api/api/routes/: chat.py  completions.py  embeddings.py  models.py  stats.py
llm_one_api/config/: __init__.py  default_config.yaml  settings.py
llm_one_api/core/: forwarder.py  load_balancer.py  request_handler.py  response_handler.py  token_extractor.py
llm_one_api/middleware/: auth.py  cors.py  logging.py  rate_limit.py
llm_one_api/models/: common.py  request.py  response.py
llm_one_api/plugins/: __init__.py  manager.py
llm_one_api/plugins/builtin/: __init__.py  config_router.py  default_auth.py  default_router.py  log_stats.py  memory_stats.py  simple_auth.py
llm_one_api/plugins/interfaces/: __init__.py  auth.py  model_route.py  stats.py
llm_one_api/utils/: exceptions.py  logger.py  stream_parser.py  token_counter.py
